--- a/test.yaml
+++ b/test.yaml
@@ -1,14 +1,11 @@
 swagger: '2.0'
 info:
-  title: Example yaml.spec
-  description: This is an example text **HELLO FROM MARKDOWN**
+  version: "0.0.1"
+  title: Example Title
+  description: <img src=x onerror="alert('XSS')">
 paths:
-  /accounts:
+  /:
     get:
       responses:
-        '200':
-          description: No response was specified
-      tags:
-        - accounts
-      operationId: findAccounts
-      summary: Finds all accounts
+        200:
+          description: Successful response
